fix aligning issue

--- a/components/about/styles.module.scss
+++ b/components/about/styles.module.scss
@@ -21,5 +21,8 @@
     p {
       font-size: 1.5rem;
     }
+    h1 {
+      font-size: 3rem;
+    }
   }
 }
