--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -66,7 +66,7 @@
     }
 
     p {
-      line-height: 3rem;
+      line-height: 2.5rem;
     }
   }
   .hitme {
